# EnuTag

./: .gitignore  CMakeLists.txt  README.md  main.cc
ROOT/: combine_out.C  hist.C  histSaladOut.root  histSalad_DSVD_1.root  histSalad_DSVD_2.root  histSalad_FVD.root  hist_nu.C  hist_salad.C  hist_single.C  hists_all.C  hists_last.C  merge.C  neutrino_map.C  out.root  pdfOut  runOut.root  runOut1.root  runOut2.root  runOut300.root  runOut500.root  runOut5000.root  runOut_testPDG.root  runOut_testPions.root  run_root.py  startRoot.sh  testOut.root  testRoot.sh  verbose_out.txt  visOut.root
ROOT/outMerge/: DSVD1_merge.root  DSVD2_merge.root  Det1_merge.root  Det2_merge.root  Det3_merge.root  Det4_merge.root  Det5_merge.root  Extra_merge.root  FVD_merge.root  Middle1_merge.root  Middle2_merge.root  Middle3_merge.root  Middle4_merge.root  Middle5_merge.root  Neutrinos_merge.root  Spectra_merge.root  USVD_merge.root
include/: ENUTAG_ActionInitialization.hh  ENUTAG_AnalysisManager.hh  ENUTAG_Construction.hh  ENUTAG_EventAction.hh  ENUTAG_PrimaryGenerator.hh  ENUTAG_PrimaryGeneratorMessenger.hh  ENUTAG_RunAction.hh  ENUTAG_RunActionMessenger.hh  ENUTAG_SensitiveDetector.hh  ENUTAG_SteppingAction.hh
macros/: graphics.mac  run.mac  test.mac  vis.mac
sbatch/: run_gen.py  sh_gen.py
sbatch/sh/: test0.sh  (+10 more)
src/: ENUTAG_ActionInitialization.cc  ENUTAG_Construction.cc  ENUTAG_EventAction  ENUTAG_EventAction.cc  ENUTAG_PrimaryGenerator.cc  ENUTAG_PrimaryGeneratorMessenger.cc  ENUTAG_RunAction.cc  ENUTAG_RunActionMessenger.cc  ENUTAG_SensitiveDetector.cc  ENUTAG_SteppingAction.cc
(+10 files in other folders)
